src/objects/Bank_account__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bank accounts</relationshipLabel>
        <relationshipName>Bank_accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_month__c</fullName>
        <formula>IF( ISPICKVAL( Type_of_bank_account__c , &apos;Кредитовый счет&apos;) , Money__c / 12, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit(month)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_overdraft_creation__c</fullName>
        <label>Date of overdraft creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_limit__c</fullName>
        <label>Day limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Money__c</fullName>
        <label>Money</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_month__c</fullName>
        <formula>DATE(YEAR( DATEVALUE(CreatedDate) ), MONTH( DATEVALUE(CreatedDate) )+1, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>13</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdraft__c</fullName>
        <label>Overdraft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replenishment_month__c</fullName>
        <formula>IF( ISPICKVAL( Type_of_bank_account__c , &apos;Дебитовый счет&apos;) , Account__r.Sum_of_d__c / 12 * 0.02, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replenishment(month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sum_of_credit__c</fullName>
        <formula>IF( ISPICKVAL( Type_of_bank_account__c , &apos;Кредитовый счет&apos;) , Account__r.Sum_of_c__c / 12, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time2__c</fullName>
        <label>Time2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>TIMENOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Type_of_bank_account__c</fullName>
        <label>Type of bank account</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Дебитовый счет</fullName>
                </value>
                <value>
                    <fullName>Кредитовый счет</fullName>
                </value>
                <value>
                    <fullName>Дебитовый счет(овердрафт)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>local_day_limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>local_day_limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bank account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank accounts</pluralLabel>
    <recordTypes>
        <fullName>Credit</fullName>
        <active>true</active>
        <label>Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Debit</fullName>
        <active>true</active>
        <label>Debit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>For_Customers</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Account__r.Type_of_bank_account__c , &apos;Organization&apos;) ,
  ISPICKVAL( Type_of_bank_account__c , &apos;Дебитовый счет&apos;) )</errorConditionFormula>
        <errorMessage>Only private customers can create &quot;Дебитовый счет&quot;!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_No_Card</fullName>
        <active>true</active>
        <errorConditionFormula>$ObjectType.Credit__c.Fields.Bank_account__c  &lt;&gt;  Id
&amp;&amp;
 Overdraft__c &lt;&gt; null</errorConditionFormula>
        <errorDisplayField>Overdraft__c</errorDisplayField>
        <errorMessage>You can&apos;t use overdraft without credit card</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_No_Overdraft</fullName>
        <active>true</active>
        <errorConditionFormula>Overdraft__c  = null  &amp;&amp;   Money__c &lt; 0</errorConditionFormula>
        <errorMessage>It&apos;s can&apos;t be less than zero, without overdraft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Less_Than</fullName>
        <active>true</active>
        <errorConditionFormula>Overdraft__c &lt; -500</errorConditionFormula>
        <errorDisplayField>Overdraft__c</errorDisplayField>
        <errorMessage>To much</errorMessage>
    </validationRules>
</CustomObject>